--- a/motel_room.html
+++ b/motel_room.html
@@ -10,9 +10,10 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.0/umd/popper.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js"></script>
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyADVtnbKvrQYas4qz_ugtEKhit1bvnH9zQ&amp;sensor=false"></script>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyADVtnbKvrQYas4qz_ugtEKhit1bvnH9zQ&amp;"></script>
     <script src="https://apis.google.com/js/platform.js" async defer></script>
     <script src="js/richmarker.js"></script>
+    <script src="js/jquery.matchHeight.js"></script>
     <script src="js/style.js"></script>
 </head>
 <body>
